Fix for PR middle-end/20364, backported from mainline.

Backport from mainline
2004-04-13  James E Wilson  <wilson@specifixinc.com>
PR middle-end/20364
* c-opt.c (c_common_post_options): If this_input_filename is NULL,
increment errorcount and return false instead of true.

From-SVN: r96152